@@ -12,7 +12,7 @@
     
     <style type="text/css">
         html, body {margin:0; border:none; padding:0;}
-        .container {position:relative; margin:0 0 100px 0; padding:0 110px;}
+        .container {position:relative; margin:0 0 100px 0;}
         .paginator {padding:0 120px; background:#f0f0f0;}
         .item {width:150px; height:150px; border-right:10px solid #fff; float:left; background:#f00; color:#fff;}
         .paginator-controls .previous, .paginator-controls .next {width:100px; background:#0f0; position:absolute; top:0; height:150px; border-style:solid; border-color:#00f;}
@@ -36,7 +36,11 @@
             }
             
             pager = new ScalingPaginator(container, {
-                direction: 'horizontal'
+                direction: 'horizontal',
+                offsets:   {
+                    right: 110,
+                    left:  110
+                }
             });
             pager.setup();
             pager.addControls();
@@ -57,7 +61,11 @@
             }
             
             pager2 = new ScalingPaginator(container, {
-                direction: 'horizontal'
+                direction: 'horizontal',
+                offsets:   {
+                    right: 110,
+                    left:  110
+                }
             });
             pager2.setup();
             pager2.addControls();
@@ -78,7 +86,11 @@
             }
             
             pager3 = new ScalingPaginator(container, {
-                direction: 'horizontal'
+                direction: 'horizontal',
+                offsets:   {
+                    right: 110,
+                    left:  110
+                }
             });
             pager3.setup();
             pager3.addControls();
